kind_kong_grpc/service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: grpcbin
  labels:
    app: grpcbin
spec:
  containers:
    - name: grpcbin
      image: moul/grpcbin # https://hub.docker.com/r/moul/grpcbin
---
apiVersion: v1
kind: Service
metadata:
  name: grpcbin
  labels:
    app: grpcbin
spec:
  type: NodePort
  selector:
    app: grpcbin
  ports:
    - name: insecure
      port: 9000
    - name: secure
      port: 9001
