kind_kong_grpc/ingress_0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "grpc,grpcs"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: grpcbin
          servicePort: insecure
